--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "expect": "^26.1.0",
     "express": "^4.17.1",
+    "mocha": "^8.0.1",
     "socket.io": "^2.3.0"
   }
 }
