--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expect": "^26.1.0",
     "express": "^4.17.1",
     "mocha": "^8.0.1",
+    "moment": "^2.27.0",
     "socket.io": "^2.3.0"
   }
 }
